# ai-chat-branch-monorepo

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
ai-chat-branch-be/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai-chat-branch-be/app/: db.py  main.py
ai-chat-branch-be/app/agent_workflows/: chain_of_thought.py  constants.py  deep_research.py  default.py  index.py  interface.py  summary.py  think_longer.py  tree_of_thoughts.py
ai-chat-branch-be/app/agent_workflows/agents_and_tools/: index.py
ai-chat-branch-be/app/agent_workflows/deep_research/: agents.py  index.py  prompts.py
ai-chat-branch-be/app/agent_workflows/tree_of_thoughts/: agents.py  index.py
ai-chat-branch-be/app/datatype/: index.py
ai-chat-branch-be/app/prompts/: constants.py  default.py  index.py  interface.py  reply.py  select.py
ai-chat-branch-be/app/utils/: model.py  prompt.py
ai-chat-branch-be/ddl/: v1.sql
ai-chat-branch-be/dml/: v1.sql  v2.sql
ai-chat-branch-fe/: .dockerignore  .env.development  .env.production  .gitignore  Dockerfile  Dockerfile.dev  README.md  next.config.js  package.json  prettier.config.js  tailwind.config.js
ai-chat-branch-fe/components/: menu.tsx  mobile_menu.tsx
ai-chat-branch-fe/config/: site.ts
ai-chat-branch-fe/constants/: index.tsx
ai-chat-branch-fe/layouts/: default.tsx  head.tsx
ai-chat-branch-fe/pages/: _app.tsx  _document.tsx  index.tsx
ai-chat-branch-fe/services/: index.ts
ai-chat-branch-fe/standalone/: package.json  server.js
ai-chat-branch-fe/types/: agentic_modes.d.ts  conversations.d.ts  index.d.ts  (+1 more)
(+90 files in other folders)
